package com.amazon.ata.music.playlist.service.dynamodb.models;

import com.amazonaws.services.dynamodbv2.datamodeling.*;

import java.util.Objects;

public class AlbumTrack {
    private String asin;
    private Integer trackNumber;
    private String albumName;
    private String songTitle;
    
    @DynamoDBHashKey(attributeName = "asin")
    public String getAsin() {
        return asin;
    }
    
    public void setAsin(String asin) {
        this.asin = asin;
    }
    
    @DynamoDBRangeKey(attributeName = "track_number")
    public Integer getTrackNumber() {
        return trackNumber;
    }
    
    public void setTrackNumber(Integer trackNumber) {
        this.trackNumber = trackNumber;
    }
    
    @DynamoDBAttribute(attributeName = "album_name")
    public String getAlbumName() {
        return albumName;
    }
    
    public void setAlbumName(String albumName) {
        this.albumName = albumName;
    }
    
    @DynamoDBAttribute(attributeName = "song_title")
    public String getSongTitle() {
        return songTitle;
    }
    
    public void setSongTitle(String songTitle) {
        this.songTitle = songTitle;
    }
    
    @Override
    public boolean equals(Object o) {
        if (this == o) {
            return true;
        }
        
        if (o == null || getClass() != o.getClass()) {
            return false;
        }
        
        AlbumTrack that = (AlbumTrack) o;
        return asin.equals(that.asin) &&
                 trackNumber.equals(that.trackNumber) &&
                 Objects.equals(albumName, that.albumName) &&
                 Objects.equals(songTitle, that.songTitle);
    }
    
    @Override
    public int hashCode() {
        return Objects.hash(asin, trackNumber, albumName, songTitle);
    }
    
    @Override
    public String toString() {
        return "AlbumTrack{" +
                 "asin='" + asin + '\'' +
                 ", trackNumber=" + trackNumber +
                 ", albumName='" + albumName + '\'' +
                 ", songTitle='" + songTitle + '\'' +
                 '}';
    }
}
